Lesson 6; Midterm project

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -225,7 +225,10 @@
     "- Gradient Descent: our tools for solving optimization problems\n",
     "- Interpretation: understanding models\n",
     "\n",
+    "**Gradient Descent** (continued from last week)\n",
+    "- [Gradient Descent](Gradient_Descent.ipynb)\n",
     "\n",
+    "*\n",
     "**Support Vector Classifiers**\n",
     "- [Support Vector Machines: Overview](SVM_Overview.ipynb)\n",
     "- [SVC Loss function](SVM_Hinge_Loss.ipynb)\n",
@@ -233,9 +236,6 @@
     "- [SVM: Kernel Transformations](SVM_Kernel_Functions.ipynb)\n",
     "- [SVM Wrapup](SVM_Coda.ipynb)\n",
     "     \n",
-    "**Gradient Descent**\n",
-    "- [Gradient Descent](Gradient_Descent.ipynb)\n",
-    "\n",
     "**Interpretation**\n",
     "- [Interpretation: Linear Models](Linear_Model_Interpretation.ipynb)\n",
     "  \n",
@@ -243,7 +243,31 @@
     "**Deeper Dives**\n",
     "- [SVC Loss function derivation](SVM_Derivation.ipynb)\n",
     "- [Missing Data](Missing_Data.ipynb)\n",
+    "- [Feature importance](Feature_Importance.ipynb)\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Week 7\n",
+    "\n",
+    "**Plan**\n",
+    "- Unsupervised Learning: feature vectors without labels/targets\n",
+    "- Matrix Factorization\n",
+    "\n",
+    "- [Unsupervised Learning: Overview](Unsupervised_Overview.ipynb)\n",
+    "- [PCA Notebook Overview](Unsupervised_Notebook_Overview.ipynb)\n",
+    "    - [linked notebook](Unsupervised.ipynb)\n",
+    "    \n",
+    "Deeper dives\n",
+    "- [Other matrix factorization methods](Unsupervised_Other_Factorizations.ipynb)"
    ]
   },
   {
@@ -289,7 +313,7 @@
     }
    },
    "source": [
-    "# Classification\n",
+    "## Classification\n",
     "- Assignment notebook: [Ships in satellite images](assignments/Classification%20task/Ships_in_satellite_images.ipynb#)\n",
     "- Data\n",
     "    - There is an archive file containing the data\n",
@@ -300,6 +324,28 @@
     "    - The end result is that the directory should contain\n",
     "        - The assignment notebook and a helper file\n",
     "        - A directory named `Data`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Midterm Project: Bankruptcy One Year Ahead\n",
+    "- Assignment notebook [Bankruptcy One Year Ahead](assignments/bankruptcy_one_yr/Bankruptcy_oya.ipynb)\n",
+    "- Data\n",
+    "    - There is an archive file containing the data\n",
+    "    - You can find it\n",
+    "        - Under the course page: Content --> Data --> Assignments --> Bankruptcy One Year Ahead\n",
+    "        - You won't be able to view the file in the browser, but you **will** be able to Download it\n",
+    "    - You should unzip this archive into the *the same directory* as the assignment notebook\n",
+    "    - The end result is that the directory should contain\n",
+    "        - The assignment notebook and a helper file\n",
+    "        - A directory named `Data`\n",
+    "\n"
    ]
   }
  ],
