Relocated data for YC_PCA to directory 'data' from external

--- a/Gradient_Descent.ipynb
+++ b/Gradient_Descent.ipynb
@@ -763,6 +763,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "<!--- Meta-tag created by kjp to specify other files to be commited to git --->\n",
+    "<!--- #include (images/gd.gif) --->"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "metadata": {
     "slideshow": {
