--- a/Index.ipynb
+++ b/Index.ipynb
@@ -207,7 +207,11 @@
     "**Naive Bayes**\n",
     "- [Naive Bayes](Naive_Bayes.ipynb)\n",
     "\n",
-    "**Deeper Dives**\n"
+    "**Gradient Descent** (start)\n",
+    "- [Gradient Descent](Gradient_Descent.ipynb)\n",
+    "\n",
+    "**Deeper Dives**\n",
+    "- [Feature importance](Feature_Importance.ipynb)\n"
    ]
   },
   {
@@ -242,8 +246,6 @@
     "        \n",
     "**Deeper Dives**\n",
     "- [SVC Loss function derivation](SVM_Derivation.ipynb)\n",
-    "- [Missing Data](Missing_Data.ipynb)\n",
-    "- [Feature importance](Feature_Importance.ipynb)\n",
     "\n",
     "\n"
    ]
