Move partial intro to PCA into Correlated Features discussion

--- a/Unsupervised_Correlated_Features.ipynb
+++ b/Unsupervised_Correlated_Features.ipynb
@@ -238,6 +238,8 @@
     }
    },
    "source": [
+    "**Linear algebra**\n",
+    "\n",
     "A way to conceptualize $\\x^\\ip$\n",
     "- As a point in the space spanned by unit basis vectors parallel to the horizontal and vertical axes.\n",
     "$$\\begin{array}[lll]\\\\\n",
@@ -269,12 +271,75 @@
     }
    },
    "source": [
-    "But because\n",
+    "That is:\n",
+    "- Our feature space is defined by the basis vectors (\"axes\")\n",
+    "$$\\begin{array}[lll]\\\\\n",
+    "\\u_{(1)} = (1,0) \\\\\n",
+    "\\u_{(2)} = (0,1) \\\\\n",
+    "\\end{array}\n",
+    "$$\n",
+    "- $\\x^\\ip$ describes a point in the span of the basis vectors\n",
+    "    - $\\x^\\ip_1$ is the displacement of observation $\\x^\\ip$ along basis vector $\\u_{(1)}$\n",
+    "    - $\\x^\\ip_2$ is the displacement of observation $\\x^\\ip$ along basis vector $\\u_{(2)}$\n",
+    "- In general, for any length $n$ vector of features\n",
+    "$$\n",
+    "\\x^\\ip = \\sum_{j'=1}^n { \\tilde\\x^\\ip_{j'} * \\u_{(j')} }\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "One could easily imagine a *different* set of basis vectors to describe the feature space\n",
+    "- For example: a rotation of basis vectors $\\u_{(1)}, \\ldots,  \\u_{(n)}$\n",
+    "- Let this alternate set of basis vectors be denoted by $\\tilde{\\v}_{(1)}, \\ldots, \\tilde{\\v}_{(n)}$\n",
+    "- The basis vectors are mutually orthogonal\n",
+    "$$\n",
+    "\\tilde{\\v}_{(1)} \\cdot \\tilde{\\v}_{(2)} = 0\n",
+    "$$\n",
+    "- The displacements $\\x^\\ip_j$ need to be adjusted relative to the alternate basis\n",
+    "\n",
+    "$$\n",
+    "\\x^\\ip = \\sum_{j'=1}^n { \\tilde\\x^\\ip_{j'} * \\tilde{\\v}_{(j')} }\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "PCA is a technique for finding particularly interesting alternate basis vectors.\n",
+    "\n",
+    "The alternate basis is motivated by the fact that, for a given set of examples, there may be\n",
+    "pairwise correlation among features.\n",
+    "\n",
+    "- If the correlation is *perfect* for some pair of features, they are redundant\n",
+    "    - May drop one feature\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Consider the set of examples above.  Features 1 and 2 are perfectly correlated.\n",
     "$$\n",
     "\\x_2^\\ip = 2 * \\x_1^\\ip\n",
     "$$\n",
     "\n",
-    "we can create an *alternate* basis vector (no longer parallel to the axes)\n",
+    "We can create an *alternate* basis vector (no longer parallel to the axes)\n",
     "$$\n",
     "\\tilde{\\v}_{(1)} = (1,2)\n",
     "$$\n",
@@ -312,7 +377,9 @@
     }
    },
    "source": [
-    "It is rarely the case for features to be perfectly correlated\n"
+    "It is rarely the case for features to be perfectly correlated\n",
+    "\n",
+    "Let's modify the set of examples just a bit."
    ]
   },
   {
@@ -341,17 +408,13 @@
     }
    },
    "source": [
-    "In this case\n",
-    "- A second basis vector $\\tilde{\\v}_{(2)}$\n",
-    "- Orthogonal to the first\n",
-    "$$\n",
-    "\\tilde{\\v}_{(1)} \\cdot \\tilde{\\v}_{(2)} = 0\n",
-    "$$\n",
-    " could approximate $\\x^\\ip$\n",
+    "We can still find an alternate basis of $2$ vectors to perfectly describe the set of examples.\n",
     "\n",
     "$$\n",
     "\\x^\\ip = \\sum_{j'=1}^2 { \\tilde\\x^\\ip_{j'} * \\tilde{\\v}_{(j')} }\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "- The dark black line is the first alternate basis vector $\\tilde{\\v}_{(1)}$"
    ]
   },
   {
@@ -380,8 +443,13 @@
     }
    },
    "source": [
-    "The black lines represent the alternate basis vectors $\\tilde{\\v}_{(1)}, \\tilde{\\v}_{(2)}$.\n",
-    "- Alternate, compared to the original basis vectors which were parallel to the axes"
+    "As you can see:\n",
+    "- The variation along $\\tilde{\\v}_{(1)}$ is much greater than that around $\\tilde{\\v}_{(2)}$\n",
+    "- Capturing the notion that the \"main\" relationship is along $\\tilde{\\u}_{(1)}$\n",
+    "\n",
+    "In fact, if we dropped $\\tilde{\\v}_{(2)}$ such that $|| \\tilde\\x || = 1$\n",
+    "- The examples would be projected onto the line $\\tilde{\\v}_{(1)}$\n",
+    "- With little information being lost"
    ]
   },
   {
@@ -392,13 +460,7 @@
     }
    },
    "source": [
-    "As you can see:\n",
-    "- The variation along $\\tilde{\\v}_{(1)}$ is much greater than that around $\\tilde{\\v}_{(2)}$\n",
-    "- Capturing the notion that the \"main\" relationship is along $\\tilde{\\u}_{(1)}$\n",
-    "\n",
-    "In fact, if we dropped $\\tilde{\\v}_{(2)}$ such that $|| \\tilde\\x || = 1$\n",
-    "- The examples would be projected onto the line $\\tilde{\\v}_{(1)}$\n",
-    "- With little information being lost"
+    "PCA finds alternate basis vectors and *orders them* in order of decreasing variation."
    ]
   },
   {
