Modify Index.ipynb to reflect merging of weeks 6 and 7

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -225,24 +225,26 @@
     "# Week 6    \n",
     "**Plan**\n",
     "\n",
-    "- Support Vector Classifiers: a classifier with an interesting twist\n",
-    "- Gradient Descent: our tools for solving optimization problems\n",
-    "- Interpretation: understanding models\n",
+    "- Gradient Descent: our tools for solving optimization problems (continued)\n",
+    "- Unsupervised Learning: feature vectors without labels/targets (start)\n",
+    "    - Dimensionality reduction (useful for Midterm Project)\n",
+    "- Support Vector Classifiers: a classifier with an interesting twist (start)\n",
     "\n",
     "**Gradient Descent** (continued from last week)\n",
     "- [Gradient Descent](Gradient_Descent.ipynb)\n",
     "\n",
-    "*\n",
-    "**Support Vector Classifiers**\n",
+    "**Unsupervised Learning: PCA (start)**\n",
+    "- [Unsupervised Learning: Overview](Unsupervised_Overview.ipynb)\n",
+    "- [PCA Notebook Overview](Unsupervised_Notebook_Overview.ipynb)\n",
+    "    - [linked notebook](Unsupervised.ipynb)\n",
+    "  \n",
+    "**Support Vector Classifiers (start)**\n",
     "- [Support Vector Machines: Overview](SVM_Overview.ipynb)\n",
     "- [SVC Loss function](SVM_Hinge_Loss.ipynb)\n",
     "- [SVC: Large Margin Classification](SVM_Large_Margin.ipynb)\n",
     "- [SVM: Kernel Transformations](SVM_Kernel_Functions.ipynb)\n",
     "- [SVM Wrapup](SVM_Coda.ipynb)\n",
     "     \n",
-    "**Interpretation**\n",
-    "- [Interpretation: Linear Models](Linear_Model_Interpretation.ipynb)\n",
-    "  \n",
     "        \n",
     "**Deeper Dives**\n",
     "- [SVC Loss function derivation](SVM_Derivation.ipynb)\n",
@@ -261,13 +263,29 @@
     "# Week 7\n",
     "\n",
     "**Plan**\n",
-    "- Unsupervised Learning: feature vectors without labels/targets\n",
-    "- Matrix Factorization\n",
+    "- Unsupervised Learning: feature vectors without labels/targets (continued)\n",
+    "    - Netflix challenge\n",
+    "        - non-standard matrix factorization\n",
+    "        - Interesting Loss function\n",
+    "        - A bridge to Deep Learning\n",
+    "- Support Vector Classifiers: a classifier with an interesting twist (continued)        \n",
+    "- Interpretation: understanding models\n",
     "\n",
+    "**Unsupervised Learning (continued)**\n",
     "- [Unsupervised Learning: Overview](Unsupervised_Overview.ipynb)\n",
     "- [PCA Notebook Overview](Unsupervised_Notebook_Overview.ipynb)\n",
     "    - [linked notebook](Unsupervised.ipynb)\n",
-    "    \n",
+    "\n",
+    "**Support Vector Classifiers (continued)**\n",
+    "- [Support Vector Machines: Overview](SVM_Overview.ipynb)\n",
+    "- [SVC Loss function](SVM_Hinge_Loss.ipynb)\n",
+    "- [SVC: Large Margin Classification](SVM_Large_Margin.ipynb)\n",
+    "- [SVM: Kernel Transformations](SVM_Kernel_Functions.ipynb)\n",
+    "- [SVM Wrapup](SVM_Coda.ipynb)\n",
+    "\n",
+    "**Interpretation**\n",
+    "- [Interpretation: Linear Models](Linear_Model_Interpretation.ipynb)\n",
+    "  \n",
     "Deeper dives\n",
     "- [Other matrix factorization methods](Unsupervised_Other_Factorizations.ipynb)"
    ]
