--- a/SVM_Coda.ipynb
+++ b/SVM_Coda.ipynb
@@ -206,7 +206,7 @@
     "The Margin Penalty, which tries to reduce the value of elements of $\\Theta$ will thus\n",
     "be more likely to reduce $\\Theta_2$ than $\\Theta_1$ for no reason other than the disparate scales.\n",
     "\n",
-    "As we saw in our lecture on transformations, this is a danger with cost functions that\n",
+    "As we saw in our lecture on transformations, this is a danger with loss/cost functions that\n",
     "include a penalty for parameters magnitude."
    ]
   },
