Revised PCA, Imbalanced Data presentations

--- a/Feature_Importance.ipynb
+++ b/Feature_Importance.ipynb
@@ -163,7 +163,7 @@
     "\n",
     "One method of measuring the importance of $\\x_j$ is the amount of impurity decrease it creates.\n",
     "\n",
-    "- For each feature $x_j$\n",
+    "- For each feature $\\x_j$\n",
     "    - find each node $\\node{n}$ in *any* tree in the forest with question $(j, v)$ for *any* $v$\n",
     "        - compute the information gain of the split on $(j, v)$ \n",
     "    - average the information gain across all such nodes\n",
