--- a/Imbalanced_Data.ipynb
+++ b/Imbalanced_Data.ipynb
@@ -428,8 +428,11 @@
     }
    },
    "source": [
-    "- `sklearn` inverse frequency weights\n",
-    "    - user-defined weights (`sklearn` optional `class_weights` argument to some classification models)"
+    "Most models in `sklearn` take an optional `class_weights` optional argument\n",
+    "\n",
+    "Allows for different importance (w.r.t. Loss) of different classes\n",
+    "- Can be used to address imbalance\n",
+    "- Can be used to address increased importance (regardless of size) of a particular class"
    ]
   },
   {
@@ -440,7 +443,22 @@
     }
    },
    "source": [
-    "# Resampling\n",
+    "# Data Augmentation\n",
+    "\n",
+    "We will describe several methods for modifying the training examples.\n",
+    "\n",
+    "They usually involve adding examples in order to achieve balance across classes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Resampling\n",
     "\n",
     "Re-sampling is a process of constructing a new set of training examples by\n",
     "drawing samples from the original.\n",
@@ -490,80 +508,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "**Caveat:**  No \"cheating\" in cross validation, again\n",
-    "\n",
-    "Does it make a difference if\n",
-    "- We resample before cross validation ?\n",
-    "- We resample *during* cross validation ?\n",
-    "\n",
-    "Yes !"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "- By resampling before cross validation\n",
-    "    - the fold that is out-of-sample comes from the more-balanced resampled distribution\n",
-    "- By resampling during cross validation\n",
-    "    - Create the folds, including the out of sample fold\n",
-    "    - Resample from the remaining folds to get a more balanced resampled distribution for this iteration"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Is there a **simple** way to resample without cheating ?\n",
-    "\n",
-    "We can resample during cross-validation by making the resampling step the first element of a Pipeline\n",
-    "- See the lecture on Cross Validation without cheating\n",
-    "- PROBLEM: we would also need to modify the target, which `sklearn` does not yet support\n",
-    "    - See [this proposal](https://scikit-learn-enhancement-proposals.readthedocs.io/en/latest/slep001/proposal.html) to enhance Transformers to support target transformation as well\n",
-    "- ISSUE: if we apply this Pipeline consistently (to both training and test examples)\n",
-    "    - What does this do to the distribution of test examples ?\n",
-    "    - It would make the training and test distributions similar IF we were given multiple test examples at once\n",
-    "   - Real world behavior: test examples are presented \"on-line\": one at a time, not as a group\n",
-    "        - We can't rebalance a single example\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "The question is: \"What are we trying to achieving by resampling ?\"\n",
-    "\n",
-    "If our goal is to get the Loss Function to place more emphasis (greater weight) on examples from the under represented class:\n",
-    "- use `sklearn`'s `class_weights` optional argument\n",
-    "- Similar effect (on the Loss function) to rebalancing, but without the side effects"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "# Synthetic examples\n",
+    "## Synthetic examples\n",
     "\n",
     "Oversampling merely duplicates existing examples from the Minority class.\n",
     "\n",
@@ -584,6 +533,75 @@
     "- Choose an example; find \"close\" neighboring examples of the same class (Minority)\n",
     "    - Using a metric of distance between examples\n",
     "- Create an example that blends/interpolates features from the neighbors into a new example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Issues with augmenting the training examples\n",
+    "\n",
+    "We have described several techniques for augmenting the training examples.\n",
+    "- The goal is to make the Loss calculation more sensitive to the under-represented class\n",
+    "\n",
+    "We could achieve the same effect by using a weighted Loss function (Loss sensitive training)\n",
+    "- Setting $C_\\text{Positive} = C_\\text{Negative}$ will give equal weight to both classes, regardless of the size of each\n",
+    "\n",
+    "From a mathematical perspective (w.r.t., Loss) these are equivalent.\n",
+    "\n",
+    "**But** there are important practical differences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The augmented set of examples used for training\n",
+    "- has been made *different* in distribution (i.e., balanced)\n",
+    "- from the actual out of sample examples that will be experienced post-training (imbalanced)\n",
+    "\n",
+    "But if we just feed the augmented examples into cross-validation\n",
+    "- the held-out fold will come from the augmented distribution, not the true distribution\n",
+    "\n",
+    "(The same would happen if we just used a fraction of the augmented examples as a Validation set.)\n",
+    "\n",
+    "Thus, the metrics computed by cross-validation on the hold-out folds will not be predictive of true out of sample behavior"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "*Any* calculation (e.g., conditional metrics)\n",
+    "- using a subset of the augmented examples as a proxy for out of sample \n",
+    "- will not be representative of true out of sample\n",
+    "\n",
+    "We must keep this in mind when using Augmentation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "So, from a practical perspective\n",
+    "- Modifying the Loss function (loss-sensitive training)\n",
+    "- May avoid \"side-effects\""
    ]
   },
   {
