--- a/Index.ipynb
+++ b/Index.ipynb
@@ -241,10 +241,7 @@
     "**Support Vector Classifiers (start)**\n",
     "- [Support Vector Machines: Overview](SVM_Overview.ipynb)\n",
     "- [SVC Loss function](SVM_Hinge_Loss.ipynb)\n",
-    "- [SVC: Large Margin Classification](SVM_Large_Margin.ipynb)\n",
-    "- [SVM: Kernel Transformations](SVM_Kernel_Functions.ipynb)\n",
-    "- [SVM Wrapup](SVM_Coda.ipynb)\n",
-    "     \n",
+    "- [SVC: Large Margin Classification](SVM_Large_Margin.ipynb)    \n",
     "        \n",
     "**Deeper Dives**\n",
     "- [SVC Loss function derivation](SVM_Derivation.ipynb)\n",
@@ -263,31 +260,77 @@
     "# Week 7\n",
     "\n",
     "**Plan**\n",
+    "- Support Vector Classifiers: a classifier with an interesting twist (continued)  \n",
+    "    - Support Vector Machines: Kernel Transformations\n",
+    " \n",
     "- Unsupervised Learning: feature vectors without labels/targets (continued)\n",
+    "    - PCA in Finance\n",
+    "        - Yield Curve movements\n",
+    "        - Equity Index member returns\n",
     "    - Netflix challenge\n",
     "        - non-standard matrix factorization\n",
     "        - Interesting Loss function\n",
     "        - A bridge to Deep Learning\n",
-    "- Support Vector Classifiers: a classifier with an interesting twist (continued)        \n",
+    "        \n",
     "- Interpretation: understanding models\n",
     "\n",
-    "**Unsupervised Learning (continued)**\n",
-    "- [Unsupervised Learning: Overview](Unsupervised_Overview.ipynb)\n",
-    "- [PCA Notebook Overview](Unsupervised_Notebook_Overview.ipynb)\n",
-    "    - [linked notebook](Unsupervised.ipynb)\n",
+    "**Imbalanced data (clarification)**\n",
+    "[Data Augmentation: side-effects](Imbalanced_Data.ipynb#Issues-with-augmenting-the-training-examples)\n",
     "\n",
     "**Support Vector Classifiers (continued)**\n",
-    "- [Support Vector Machines: Overview](SVM_Overview.ipynb)\n",
-    "- [SVC Loss function](SVM_Hinge_Loss.ipynb)\n",
-    "- [SVC: Large Margin Classification](SVM_Large_Margin.ipynb)\n",
     "- [SVM: Kernel Transformations](SVM_Kernel_Functions.ipynb)\n",
     "- [SVM Wrapup](SVM_Coda.ipynb)\n",
+    "\n",
+    "**Unsupervised Learning (continued)**\n",
+    "- [Interpreting the Components](PCA_Interpretation.ipynb)\n",
+    "- [PCA in Finance](PCA_Yield_Curve_Intro.ipynb)\n",
+    "    - [linked notebook](Unsupervised.ipynb)\n",
+    "- [Pseudo Matrix Factorization](Pseudo_Matrix_Factorization)\n",
+    "\n",
+    "\n",
     "\n",
     "**Interpretation**\n",
     "- [Interpretation: Linear Models](Linear_Model_Interpretation.ipynb)\n",
     "  \n",
     "Deeper dives\n",
     "- [Other matrix factorization methods](Unsupervised_Other_Factorizations.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<html>\n",
+    "<p style=\"font-size:32px\"><strong>Deep Learning</strong></p>\n",
+    "</html>\n",
+    "\n",
+    "# Week 1 Introduction to Neural Networks and Deep Learning\n",
+    "\n",
+    "**Plan**\n",
+    "\n",
+    "Deep Learning/Neural networks\n",
+    "\n",
+    "- [Set up your Tensorflow environment](Tensorflow_setup.ipynb)\n",
+    "\n",
+    "- [Neural Networks Overview](Neural_Networks_Overview.ipynb)\n",
+    "\n",
+    "- Coding Neural Networks: Tensorflow, Keras\n",
+    "    - [Intro to Keras](Tensorflow_Keras.ipynb)\n",
+    "\n",
+    "- Practical Colab\n",
+    "<!--- The Colab notebook imports some modules; make sure they are in the repo --->\n",
+    "<!--- #include (neural_net_helper.py) --->\n",
+    "   - **Colab**: [Practical Colab Notebook from github](https://colab.research.google.com/github/kenperry-public/ML_Fall_2021/blob/master/Colab_practical.ipynb)\n",
+    "    \n",
+    "**Deeper Dives**\n",
+    "- [Keras, from past to present](Tensorflow_Keras_Archaeology.ipynb)\n",
+    "- [History/Computation Graphs: Tensorflow version 1](DNN_TensorFlow_Using_TF_version_1.ipynb)\n",
+    "- [Raw_TensorFlow example Notebook from github](https://colab.research.google.com/github/kenperry-public/ML_Spring_2020/blob/master/Raw_TensorFlow.ipynb) (**Colab**)\n",
+    "- [Computation Graphs](Computation_Graphs.ipynb)\n"
    ]
   },
   {
