--- a/PCA_Yield_Curve_Intro.ipynb
+++ b/PCA_Yield_Curve_Intro.ipynb
@@ -171,60 +171,14 @@
     }
    },
    "source": [
-    "# Correlated features\n",
+    "# PCA in Finance\n",
     "\n",
-    "Our goal is to find ways to reduce the dimensionality of feature vectors.\n",
+    "Long before Machine Learning became popular, PCA was used to \"explain\" the yield curve.\n",
     "\n",
-    "Let's explore correlated features \n",
-    "in the notebook on [Correlated features](Unsupervised_Correlated_Features.ipynb)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Principal Components: An alternate basis for our examples\n",
-    "\n",
-    "Given that the features may be correlated\n",
-    "- We saw how changing the basis\n",
-    "- Can express the same examples\n",
-    "- In an alternate basis that is perhaps smaller\n",
-    "\n",
-    "Let's formalize the notion of [alternate basis](Unsupervised.ipynb#Alternate-basis)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Principal components: introduction\n",
-    "\n",
-    "We have seen how we can express the examples in $\\X$ in two coordinate systems\n",
-    "- The one with \"original\" features\n",
-    "- An alternate basis with \"synthetic features\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Principal Components Analysis is the mechanism that we use\n",
-    "- To discover the new, alternate basis\n",
-    "- To find the feature values of examples, as measured in the alternate basis\n",
-    "\n",
-    "Let's visit the [notebook section introducing PCA](Unsupervised.ipynb#What-is-PCA)"
+    "A Yield Curve is a vector of features\n",
+    "- Whose length $n$ corresponds to the number of bond maturities\n",
+    "- $\\x^\\ip_j$ is the yield, on day $i$ of the $j^{th}$ bond\n",
+    "    - $j$ increases with maturity"
    ]
   },
   {
@@ -235,15 +189,14 @@
     }
    },
    "source": [
-    "# PCA: The math\n",
+    "Does the yield of each maturity change (from day to day)\n",
+    "- Independently of other maturities ?\n",
+    "- Or are there a small number of \"common factors\"/\"concepts\" that drive daily yield changes ?\n",
     "\n",
-    "The goal of PCA is to find a way of expressing examples $\\X$\n",
-    "- In a new basis $V^T$\n",
-    "- With feature values $\\tilde\\X$\n",
+    "PCA can help us answer the question.\n",
     "\n",
-    "$$\n",
-    "\\X = \\tilde\\X V^T\n",
-    "$$"
+    "In the process, we are also able to *interpret* the common factors\n",
+    "- Which helps our intuition"
    ]
   },
   {
@@ -254,132 +207,18 @@
     }
    },
    "source": [
-    "That is, we decompose $\\X$ into a product\n",
-    "- factorization of $\\X$\n",
-    "\n",
-    "Let's go to the [notebook section on Matrix factorization](Unsupervised.ipynb#PCA-via-Matrix-factorization)\n",
-    "to explore how to factor $\\X$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# PCA: reducing the number of dimensions\n",
-    "\n",
-    "Thus far\n",
-    "- Both the original basis and the new basis $V$ have consisted of $n$ basis vectors\n",
-    "- No information has been lost by the basis transformation\n",
-    "$$\n",
-    "\\X = \\tilde\\X V^T\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "If we are willing to lose some information\n",
-    "\n",
-    "$$\n",
-    "\\X' \\approx \\X\n",
-    "$$\n",
-    "\n",
-    "we can achieve dimensionality reduction\n",
-    "- By an alternate basis $(V^T)'$ of $r \\le n$ basis vectors\n",
-    "- With synthetic feature vectors $\\X'$ of length $r$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "That is: $\\tilde\\X'$ is a *reduced dimension* representation.\n",
-    "\n",
-    "Questions to consider\n",
-    "- *Which* synthetic features to drop\n",
-    "- *How many* synthetic features to drop/keep\n",
-    "\n",
-    "Let's go to the notebook section on [dimensionality reduction](Unsupervised.ipynb#Dimensionality-reduction)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Transforming between original and synthetic features\n",
-    "\n",
-    "We have thus far been concerned with the transformation\n",
-    "- From original features $\\X$\n",
-    "- To synthetic features $\\tilde\\X$\n",
-    "\n",
-    "We can also go in the opposite direction: from $\\tilde\\X$ back to original features $\\X$\n",
-    "\n",
-    "Let's go to the [notebook section on inverse transformation](Unsupervised.ipynb#The-inverse-transformation)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# PCA in action\n",
-    "\n",
-    "An example will hopefully tie together all the concepts.\n",
-    "\n",
-    "Let's visit the [notebook section on PCA of small digits](Unsupervised.ipynb#Example:-Reconstructing-$\\x$-from-$\\tilde\\x$-and-the-principal-components)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Choosing the number of reduced dimensions\n",
-    "\n",
-    "Let's visit the [notebook section on PCA of MNIST](Unsupervised.ipynb#MNIST-example) in order to see how\n",
-    "the quality of approximation varies with the number of features in $\\tilde\\X$"
+    "Let's visit the [notebook section on PCA of the Yield Curve](Unsupervised.ipynb#PCA-in-Finance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Done\")"
    ]
